story 4.7